refactor(operations): align persistence infrastructure conventions